--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
 </head>
+<header>
+    <div class="shapka">
+        <div class="logo"></div>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><details><summary><a href="">Courser</a></summary></details></li>
+        <li><details><summary><a href="">Blog</a></summary></details></li>
+        <button><p>Contact us</p></button>
+    </div>
+</header>
 <body>
-    <h1>sdsad</h1>
+    <div class="Info-block-one">
+        <h1>Start learning with us now</h1>
+    </div>
 </body>
 </html>
